tests/specs/ecosystem/codemonument/zod_semver/1_3_8.test
codemonument/zod-semver/1.3.8
-- deno.lock --

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-type]: missing explicit type in the public API
  --> /src/main.ts:24:14
   | 
24 | export const ZodSemverUnbranded = z.string().regex(
   |              ^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /src/main.ts:40:14
   | 
40 | export const ZodSemver = ZodSemverUnbranded.brand<
   |              ^^^^^^^^^ this symbol is missing an explicit type
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


